etc/openshift-istio/hasher-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasher
spec:
  selector: 
    matchLabels: 
      app: hasher
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels: 
        app: hasher
    spec:
      containers: 
        -
          image: openshiftacademiaonline/dockercoins-ops:hasher-latest
          name: ruby
          ports: 
            -
              containerPort: 8080
