etc/openshift-istio/hasher-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: hasher-svc
spec: 
  ports: 
    -
      port: 80
      targetPort: 8080
  selector:
    app: hasher
