etc/openshift-istio/webui-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webui-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - 
      hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
