etc/openshift-istio/webui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webui-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - webui-gateway
  http:
    - 
      match:
        - uri:
            exact: /index.html
      route:
        - destination:
            host: webui-svc
            port:
              number: 80
